--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,7 +15,7 @@
 				<!-- The "Hello World!" message comes from /SimpleServlet -->
 				<h1 id = "message"></h1>
 				
-				<p class='description'></p> Thanks for creating a <span class="blue">Liberty for Java Starter Application</span>.
+				<p class='description'></p> Welcome To  <span class="blue"> NMAMIT Cloud Project</span>.
 			</td>
 		</tr>
 	</table>
